--- a/nga/standardize_nga.ipynb
+++ b/nga/standardize_nga.ipynb
@@ -485,25 +485,25 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Oxytropis nigrescens s. bryophila</td>\n",
+       "      <td>Cladonia arbuscula s. lat.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Salix richardsonii</td>\n",
+       "      <td>Spore-bearing</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Betula exilis</td>\n",
+       "      <td>Alnus viridis ssp. fruticosa</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  datasetSpeciesName\n",
-       "0  Oxytropis nigrescens s. bryophila\n",
-       "1                 Salix richardsonii\n",
-       "2                      Betula exilis"
+       "             datasetSpeciesName\n",
+       "0    Cladonia arbuscula s. lat.\n",
+       "1                 Spore-bearing\n",
+       "2  Alnus viridis ssp. fruticosa"
       ]
      },
      "execution_count": 8,
@@ -566,20 +566,20 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Oxytropis nigrescens s. bryophila</td>\n",
-       "      <td>Oxytropis nigrescens</td>\n",
-       "      <td>forb</td>\n",
+       "      <td>Cladonia arbuscula s. lat.</td>\n",
+       "      <td>Cladonia arbuscula</td>\n",
+       "      <td>lichen</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Salix richardsonii</td>\n",
-       "      <td>Salix richardsonii</td>\n",
-       "      <td>shrub</td>\n",
+       "      <td>Spore-bearing</td>\n",
+       "      <td>Spore-bearing</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Betula exilis</td>\n",
-       "      <td>Betula exilis</td>\n",
+       "      <td>Alnus viridis ssp. fruticosa</td>\n",
+       "      <td>Alnus viridis</td>\n",
        "      <td>shrub</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -587,11 +587,11 @@
        "</div>"
       ],
       "text/plain": [
-       "                      datasetSpeciesName               joinKey speciesHabit\n",
-       "index                                                                      \n",
-       "0      Oxytropis nigrescens s. bryophila  Oxytropis nigrescens         forb\n",
-       "1                     Salix richardsonii    Salix richardsonii        shrub\n",
-       "2                          Betula exilis         Betula exilis        shrub"
+       "                 datasetSpeciesName             joinKey speciesHabit\n",
+       "index                                                               \n",
+       "0        Cladonia arbuscula s. lat.  Cladonia arbuscula       lichen\n",
+       "1                     Spore-bearing       Spore-bearing          NaN\n",
+       "2      Alnus viridis ssp. fruticosa       Alnus viridis        shrub"
       ]
      },
      "execution_count": 9,
@@ -647,28 +647,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Oxytropis nigrescens s. bryophila</td>\n",
-       "      <td>Oxytropis nigrescens</td>\n",
+       "      <td>Cladonia arbuscula s. lat.</td>\n",
+       "      <td>Cladonia arbuscula</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Salix richardsonii</td>\n",
-       "      <td>Salix richardsonii</td>\n",
+       "      <td>Spore-bearing</td>\n",
+       "      <td>Spore-bearing</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Betula exilis</td>\n",
-       "      <td>Betula exilis</td>\n",
+       "      <td>Alnus viridis ssp. fruticosa</td>\n",
+       "      <td>Alnus viridis</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  datasetSpeciesName               joinKey\n",
-       "0  Oxytropis nigrescens s. bryophila  Oxytropis nigrescens\n",
-       "1                 Salix richardsonii    Salix richardsonii\n",
-       "2                      Betula exilis         Betula exilis"
+       "             datasetSpeciesName             joinKey\n",
+       "0    Cladonia arbuscula s. lat.  Cladonia arbuscula\n",
+       "1                 Spore-bearing       Spore-bearing\n",
+       "2  Alnus viridis ssp. fruticosa       Alnus viridis"
       ]
      },
      "execution_count": 10,
@@ -806,57 +806,57 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Oxytropis nigrescens s. bryophila</td>\n",
-       "      <td>Oxytropis nigrescens</td>\n",
-       "      <td>forb</td>\n",
+       "      <td>Cladonia arbuscula s. lat.</td>\n",
+       "      <td>Cladonia arbuscula</td>\n",
+       "      <td>lichen</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Salix richardsonii</td>\n",
-       "      <td>Salix richardsonii</td>\n",
-       "      <td>shrub</td>\n",
-       "      <td>deciduous</td>\n",
+       "      <td>Spore-bearing</td>\n",
+       "      <td>Spore-bearing</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Betula exilis</td>\n",
-       "      <td>Betula exilis</td>\n",
+       "      <td>Alnus viridis ssp. fruticosa</td>\n",
+       "      <td>Alnus viridis</td>\n",
        "      <td>shrub</td>\n",
        "      <td>deciduous</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Chamaedaphne calyculata</td>\n",
-       "      <td>Chamaedaphne calyculata</td>\n",
-       "      <td>shrub</td>\n",
-       "      <td>evergreen</td>\n",
+       "      <td>Salix fuscescens</td>\n",
+       "      <td>Salix fuscescens</td>\n",
+       "      <td>shrub,dwarf shrub</td>\n",
+       "      <td>deciduous</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Cetraria laevigata</td>\n",
-       "      <td>Cetraria laevigata</td>\n",
-       "      <td>lichen</td>\n",
-       "      <td></td>\n",
+       "      <td>Salix pulchra</td>\n",
+       "      <td>Salix pulchra</td>\n",
+       "      <td>shrub</td>\n",
+       "      <td>deciduous</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  datasetSpeciesName                  joinKey speciesHabit  \\\n",
-       "0  Oxytropis nigrescens s. bryophila     Oxytropis nigrescens         forb   \n",
-       "1                 Salix richardsonii       Salix richardsonii        shrub   \n",
-       "2                      Betula exilis            Betula exilis        shrub   \n",
-       "3            Chamaedaphne calyculata  Chamaedaphne calyculata        shrub   \n",
-       "4                 Cetraria laevigata       Cetraria laevigata       lichen   \n",
+       "             datasetSpeciesName             joinKey        speciesHabit  \\\n",
+       "0    Cladonia arbuscula s. lat.  Cladonia arbuscula              lichen   \n",
+       "1                 Spore-bearing       Spore-bearing                 NaN   \n",
+       "2  Alnus viridis ssp. fruticosa       Alnus viridis               shrub   \n",
+       "3              Salix fuscescens    Salix fuscescens   shrub,dwarf shrub   \n",
+       "4                 Salix pulchra       Salix pulchra               shrub   \n",
        "\n",
        "  leafRetention  \n",
        "0                \n",
-       "1     deciduous  \n",
+       "1                \n",
        "2     deciduous  \n",
-       "3     evergreen  \n",
-       "4                "
+       "3     deciduous  \n",
+       "4     deciduous  "
       ]
      },
      "execution_count": 13,
@@ -880,12 +880,12 @@
     {
      "data": {
       "text/plain": [
-       "['forb',\n",
-       " 'shrub',\n",
-       " 'lichen',\n",
-       " 'moss',\n",
+       "['lichen',\n",
        " nan,\n",
+       " 'shrub',\n",
+       " 'moss',\n",
        " 'liverwort',\n",
+       " 'forb',\n",
        " 'graminoid',\n",
        " 'spore-bearing',\n",
        " 'coniferous tree']"
@@ -1458,7 +1458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 24,
    "id": "b32b620a-8598-4ea5-8a0b-1ab8f6b6e03d",
    "metadata": {},
    "outputs": [],
@@ -1519,7 +1519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 25,
    "id": "9bd92cd1-6cce-4d02-b4c0-fdaec65afac5",
    "metadata": {},
    "outputs": [],
@@ -1530,7 +1530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 26,
    "id": "88d5d30d-0ff1-41d2-8b8b-46a0c28f0d22",
    "metadata": {},
    "outputs": [
@@ -1643,7 +1643,7 @@
        "CL_EL3_Vg_Comp             0.0   0.0        0.0     0.0     0.0    0.0    0.0  "
       ]
      },
-     "execution_count": 226,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1667,7 +1667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 27,
    "id": "f4537a15-8d5a-439d-b361-efb1d3556a83",
    "metadata": {},
    "outputs": [],
@@ -1682,7 +1682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 28,
    "id": "5a21cee9-7f7a-45f2-9589-f3b419ad0ed0",
    "metadata": {},
    "outputs": [],
@@ -1693,7 +1693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 29,
    "id": "9d51f36a-402f-4c80-a5f7-c15a80a320b6",
    "metadata": {},
    "outputs": [
@@ -1822,7 +1822,7 @@
        "CL_EL3_Vg_Comp     0.0     0.0          0.0    0.0    0.0  "
       ]
      },
-     "execution_count": 229,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1877,7 +1877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 30,
    "id": "0db5df07-16f9-4067-ac15-e3686fa16ccd",
    "metadata": {},
    "outputs": [],
@@ -1899,7 +1899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 31,
    "id": "8f5b1ea0-8e15-4868-9f7e-797e4c9774d4",
    "metadata": {},
    "outputs": [],
@@ -1925,7 +1925,7 @@
     "\n",
     "# main\n",
     "new_aux['plotName'] = aux['Site Code']\n",
-    "new_aux['dataSubsource'] = 'NGEE-Arctic Amy Breen'\n",
+    "new_aux['dataSubsource'] = 'NGEE-Arctic Amy Breen (pub 2020)'\n",
     "new_aux = new_aux.merge(methods, how='left', left_on='dataSubsource', right_on='dataSubsource')\n",
     "new_aux['dataSource'] = 'NGA'\n",
     "new_aux = new_aux.set_index(new_aux['plotName'])"
@@ -1941,7 +1941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 32,
    "id": "4d46bc04-70a5-40b4-82df-ff8678f7a9ef",
    "metadata": {},
    "outputs": [],
@@ -1960,7 +1960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 33,
    "id": "853279ed-4835-418c-8163-2355fa5117c9",
    "metadata": {},
    "outputs": [],
@@ -1991,7 +1991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 34,
    "id": "218bffc1-4f21-4760-b0c1-2bbb77ba133e",
    "metadata": {},
    "outputs": [],
@@ -2014,7 +2014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 35,
    "id": "4ed725d2-e0d9-4402-82f4-d54520792bcf",
    "metadata": {},
    "outputs": [
@@ -2050,7 +2050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 36,
    "id": "27b21299-d6c3-4496-bff2-f91b9b909834",
    "metadata": {},
    "outputs": [],
@@ -2083,7 +2083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 37,
    "id": "f52696cd-d03e-450b-8745-b638b5ca445a",
    "metadata": {},
    "outputs": [
@@ -2096,13 +2096,13 @@
        "       'baregroundCover', 'waterCover', 'otherCover', 'surveyYear',\n",
        "       'surveyMonth', 'surveyDay', 'plotRadius', 'latitudeY', 'longitudeX',\n",
        "       'georefSource', 'georefAccuracy', 'coordEPSG', 'dataSubsource',\n",
-       "       'dataSource', 'surveyMethod', 'fcoverScale', 'surveyPurpose',\n",
-       "       'geometry', 'adminUnit', 'adminCountry', 'fireYears', 'bioclimSubzone',\n",
-       "       'duplicatedCoords', 'duplicatedDate'],\n",
+       "       'dataSource', 'dataSourceHtml', 'dataSubsourceCitation', 'surveyMethod',\n",
+       "       'fcoverScale', 'surveyPurpose', 'geometry', 'adminUnit', 'adminCountry',\n",
+       "       'fireYears', 'bioclimSubzone', 'duplicatedCoords', 'duplicatedDate'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 237,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2113,7 +2113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 38,
    "id": "73d8c376-bc7f-49fd-ac17-ab53e6be67e7",
    "metadata": {},
    "outputs": [],
