--- a/neon/standardize_neon.ipynb
+++ b/neon/standardize_neon.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "id": "ebe57879-c575-4632-8e68-74e72fe6f0db",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "77548174-b901-4e02-a5bd-d2798e2bf4de",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "4f29916b-7256-4565-a89f-2bc22f72b585",
    "metadata": {},
    "outputs": [],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "ed520418-515e-4d2d-afdd-df7b98227c32",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "id": "fdd4f4c9-1d78-49d4-a105-fc32347e16af",
    "metadata": {},
    "outputs": [
@@ -198,7 +198,7 @@
        "2           0.5  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "1e81abe9-023a-4ff2-bba7-cdbf0b520822",
    "metadata": {},
    "outputs": [
@@ -273,7 +273,7 @@
        "2  BARR_003.basePlot.div.32.4.1           Eriophorum sp.           0.5"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "id": "e4e79b78-a122-46e8-a366-2753060b4f80",
    "metadata": {},
    "outputs": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "1c5ef908-8ec9-4ad3-820c-d4c248634cca",
    "metadata": {},
    "outputs": [
@@ -416,7 +416,7 @@
        "2  Dillman et al. 2012   species      lichen       lichen  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "id": "ed04ae66-b596-4bcd-bda4-9819a47be4c6",
    "metadata": {},
    "outputs": [
@@ -482,7 +482,7 @@
        "2           Eriophorum sp."
       ]
      },
-     "execution_count": 31,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "id": "7add8ae9-c2f4-491c-bf96-3acde27112b8",
    "metadata": {},
    "outputs": [
@@ -570,7 +570,7 @@
        "2               Eriophorum sp.    Eriophorum sp.    graminoid"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "id": "76c312d0-ad0a-4804-9119-cd1c62dc75ab",
    "metadata": {},
    "outputs": [
@@ -647,7 +647,7 @@
        "2           Eriophorum sp.    Eriophorum sp."
       ]
      },
-     "execution_count": 33,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "id": "884d6474-fca1-4c9b-a137-20a3612d73cd",
    "metadata": {},
    "outputs": [],
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "id": "58dc936e-ef05-48c1-ac28-5a76e7ed2744",
    "metadata": {},
    "outputs": [
@@ -734,7 +734,7 @@
        "2     deciduous  Vaccinium uliginosum"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "id": "81c9b832-465e-4139-b2fa-8f0095f078f1",
    "metadata": {},
    "outputs": [
@@ -810,7 +810,7 @@
        "2           Eriophorum sp.    Eriophorum sp.    graminoid              "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "id": "61bc9738-4ace-483f-a883-b78d5225326d",
    "metadata": {},
    "outputs": [
@@ -834,7 +834,7 @@
        "['graminoid', nan, 'forb', 'shrub', 'spore-bearing']"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "id": "562082ce-a87b-441f-9aa7-f70489994b8b",
    "metadata": {},
    "outputs": [],
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "id": "9fcd3119-39fe-47b8-9b67-b309ef719e74",
    "metadata": {},
    "outputs": [
@@ -880,7 +880,7 @@
        "True"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "id": "f9ba4445-418f-419c-bfc3-5c8f514dd4d2",
    "metadata": {},
    "outputs": [],
@@ -954,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "id": "4d3b73f9-b6d8-444b-b21c-1bfc9f365b08",
    "metadata": {},
    "outputs": [
@@ -976,7 +976,7 @@
        " 'water']"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 20,
    "id": "94664ec4-91b7-479c-9629-6bffdef32a1e",
    "metadata": {},
    "outputs": [],
@@ -1028,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 21,
    "id": "3a982b51-a464-43b4-90d5-f498d4eb1c12",
    "metadata": {},
    "outputs": [
@@ -1112,7 +1112,7 @@
        "29     graminoid           NaN            NaN     graminoid  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1137,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 22,
    "id": "cefd30c0-a670-4295-8eef-18f822821599",
    "metadata": {},
    "outputs": [
@@ -1206,7 +1206,7 @@
        "2           7.0  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1225,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 23,
    "id": "f5646d2f-cd44-4a06-9a12-8afbf152c21e",
    "metadata": {},
    "outputs": [],
@@ -1236,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 24,
    "id": "e111d602-d096-440a-b352-b784039274fd",
    "metadata": {},
    "outputs": [],
@@ -1249,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 25,
    "id": "98492580-a8a9-47c2-be8d-92f56eb191b0",
    "metadata": {},
    "outputs": [
@@ -1368,7 +1368,7 @@
        "BARR_001.basePlot.div.32.4.1    78.0    9.5   0.0    1.0  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1392,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 26,
    "id": "6791825e-04f8-49f8-b888-e1c6d9049375",
    "metadata": {},
    "outputs": [],
@@ -1407,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 27,
    "id": "3966ee2f-2807-487d-92d9-97722da58f66",
    "metadata": {},
    "outputs": [],
@@ -1418,7 +1418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 28,
    "id": "c79f389f-f8f6-44e9-96c4-4ef53c1ff6ca",
    "metadata": {},
    "outputs": [
@@ -1553,7 +1553,7 @@
        "BARR_001.basePlot.div.32.4.1    78.0          0.5    1.0    9.5  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1608,7 +1608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 29,
    "id": "715535ea-5ec0-4b56-b463-defcfc3cf678",
    "metadata": {},
    "outputs": [],
@@ -1629,7 +1629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 30,
    "id": "f066abbc-4770-465c-a6e8-8c7930e6ad72",
    "metadata": {},
    "outputs": [],
@@ -1637,9 +1637,9 @@
     "def get_subsource(row):\n",
     "    new_row = []\n",
     "    if 'TOOL' in row:\n",
-    "        subsource = 'Toolik Field Station NEON'\n",
+    "        subsource = 'Toolik Field Station NEON (pub 2021)'\n",
     "    elif 'BARR' in row:\n",
-    "        subsource = 'Utqiagvik-Barrow NEON'\n",
+    "        subsource = 'Utqiagvik-Barrow NEON (pub 2021)'\n",
     "    else:\n",
     "        subsource = np.nan\n",
     "    return subsource"
@@ -1647,7 +1647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 31,
    "id": "f9266660-82eb-49a0-83ea-69ac4d4f16de",
    "metadata": {},
    "outputs": [],
@@ -1688,7 +1688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 32,
    "id": "a67e6dd3-af8d-4f8a-8743-d9ff2de99516",
    "metadata": {},
    "outputs": [],
@@ -1707,7 +1707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 33,
    "id": "cfef4685-4ea1-4fd5-a58c-8e1d6fb4a6b9",
    "metadata": {},
    "outputs": [],
@@ -1738,7 +1738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 34,
    "id": "688c77b4-6af5-4bfb-b560-1f55d21d0a40",
    "metadata": {},
    "outputs": [],
@@ -1761,7 +1761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 35,
    "id": "5401ddc4-7cd5-4610-858d-a19d1d70fac6",
    "metadata": {},
    "outputs": [
@@ -1797,7 +1797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 36,
    "id": "1ccdcfc5-16b2-4ff6-875b-14308687bab7",
    "metadata": {},
    "outputs": [],
@@ -1830,7 +1830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 37,
    "id": "5c118237-5023-4dc2-8e07-fb57196f3c20",
    "metadata": {},
    "outputs": [
@@ -1843,13 +1843,13 @@
        "       'baregroundCover', 'waterCover', 'otherCover', 'surveyYear',\n",
        "       'surveyMonth', 'surveyDay', 'plotRadius', 'latitudeY', 'longitudeX',\n",
        "       'georefSource', 'georefAccuracy', 'coordEPSG', 'dataSubsource',\n",
-       "       'dataSource', 'surveyMethod', 'fcoverScale', 'surveyPurpose',\n",
-       "       'geometry', 'adminUnit', 'adminCountry', 'fireYears', 'bioclimSubzone',\n",
-       "       'duplicatedCoords', 'duplicatedDate'],\n",
+       "       'dataSource', 'dataSourceHtml', 'dataSubsourceCitation', 'surveyMethod',\n",
+       "       'fcoverScale', 'surveyPurpose', 'geometry', 'adminUnit', 'adminCountry',\n",
+       "       'fireYears', 'bioclimSubzone', 'duplicatedCoords', 'duplicatedDate'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1860,7 +1860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 38,
    "id": "830f8769-4fc5-4e8b-8085-144522aeae65",
    "metadata": {},
    "outputs": [],
